# python-project-50

./: Makefile  README.md  demo.cast  example.py  parser.py  pyproject.toml
.github/workflows/: cheak.yml  test.yml
gendiff/: __init__.py  cli.py  diff.py  gendiff.py  generate_diff.py  parser.py
gendiff/format/: __init__.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_gendiff.py
tests/fixtures/: file1.json
