[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["DmitryFedoreev <fedoreev.doc@gmail.com>"]
readme = "README.md"
packages = [
  { include = "gendiff"},
  ]

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "5.3.1"

[tool.poetry.scripts]
gendiff = 'gendiff.cli:main'

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.0"
flake8-isort = "^6.1.1"
isort = "^5.13.2"
pytest = "^6.2"
pytest-cov = "^5.0.0"
pytest-diff = "^0.1.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

